-Fixed text wrapping

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 
 h1, p {
 	margin: 0;
+	word-wrap: break-word;
 }
 
 .container {
